--- a/schoolhero/index.html
+++ b/schoolhero/index.html
@@ -48,7 +48,7 @@
                     <div class="col-md-12">
                         <div class="row justify-content-center">
                             <div class="col-sm-5 mb-2">
-                                <input v-model="search_keyword" type="text" class="form-control rounded-0 p-2" placeholder="Search names, locations for interesting activities..." aria-label="Recipient's username" aria-describedby="button-addon2">
+                                <input v-on:keyup="filterLessons" v-model="search_keyword" type="text" class="form-control rounded-0 p-2" placeholder="Search names, locations for interesting activities..." aria-label="Recipient's username" aria-describedby="button-addon2">
                             </div>
                             <div class="col-sm-4 mb-2">
                                 <select v-model="attribute_sort" class="form-select p-2 rounded-0">
@@ -72,21 +72,22 @@
         <!-- Page body -->
         <div class="container mt-4">
             <!-- No results error message -->
-            <div v-if="filteredList().length < 1" class="row justify-content-center">
+            <div v-if="sortedList().length < 1" class="row justify-content-center">
                 <div class="col-sm-10">
                     <p class="text-center m-0">
                         <img style="width: 300px; object-fit: cover;" src="assets/images/Smiley face_Two Color.svg" alt="">
                     </p>
-                    <p class="text-center m-0"><strong>{{search_keyword}}</strong> not found</p>
+                    <p v-if="search_keyword == '' " class="text-center m-0">No items available</p>
+                    <p v-else class="text-center m-0"><strong>{{search_keyword}}</strong> not found</p>
                 </div>
             </div>
             <!-- End of no results error message -->
 
             <!-- Lessons/activities List -->
             <div class="row">
-                <div class="col-sm-3 mb-2" v-for="activity in filteredList()">
+                <div class="col-sm-3 mb-2" v-for="activity in sortedList()">
                     <div class="card mb-3 rounded-0">
-                        <img v-bind:src="activity.img_url" class="card-img-top rounded-0 mycard-img" alt="...">
+                        <!-- <img loading="lazy" v-bind:src="getImageUrl(activity.title)" class="card-img-top rounded-0 mycard-img" alt="..."> -->
                         <div class="card-body">
                             <h6 class="card-title">{{activity.title}}</h6>
                             <p class="card-text m-0"><strong>Location:</strong> {{activity.location}}</p>
@@ -126,7 +127,7 @@
                                 <!-- Loop through cart items -->
                                 <div class="col-sm-6" v-for="item in cartItemsInfo()">
                                     <div class="card mb-3 rounded-0">
-                                        <img v-bind:src="item.img_url" class="card-img-top rounded-0 mycard-img" alt="...">
+                                        <!-- <img src="" class="card-img-top rounded-0 mycard-img" alt="..."> -->
                                         <div class="card-body">
                                             <h6 class="card-title">{{item.title}}</h6>
                                             <p class="card-text m-0"><strong>Location:</strong> {{item.location}}</p>
@@ -179,7 +180,6 @@
     </div>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="js/lessons.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
