--- a/schoolhero/index.html
+++ b/schoolhero/index.html
@@ -48,10 +48,11 @@
                     <div class="col-md-12">
                         <div class="row justify-content-center">
                             <div class="col-sm-5 mb-2">
-                                <input v-on:keyup="filterLessons" v-model="search_keyword" type="text" class="form-control rounded-0 p-2" placeholder="Search names, locations for interesting activities..." aria-label="Recipient's username" aria-describedby="button-addon2">
+                                <input v-on:input="filterLessons" v-model="search_keyword" type="text" class="form-control rounded-0 p-2" placeholder="Search names, locations for interesting activities..." aria-label="Recipient's username" aria-describedby="button-addon2">
                             </div>
                             <div class="col-sm-4 mb-2">
-                                <select v-model="attribute_sort" class="form-select p-2 rounded-0">
+                                <select v-on:change="sortList" v-model="attribute_sort" class="form-select p-2 rounded-0">
+                                    <option value="">-- Sort options --</option>
                                     <option value="title">Subject</option>
                                     <option value="location">Location</option>
                                     <option value="price">Price</option>
@@ -59,7 +60,8 @@
                                 </select>
                             </div>
                             <div class="col-sm-3 mb-2">
-                                <select v-model="sort_order" class="form-select p-2 rounded-0">
+                                <select v-on:change="sortList" v-model="sort_order" class="form-select p-2 rounded-0">
+                                    <option value="">-- Sort order --</option>
                                     <option value="ascending">Ascending</option>
                                     <option value="descending">Descending</option>
                                 </select>
@@ -71,23 +73,22 @@
         </div>
         <!-- Page body -->
         <div class="container mt-4">
+
             <!-- No results error message -->
-            <div v-if="sortedList().length < 1" class="row justify-content-center">
+            <div v-if="lessons.length < 1" class="row justify-content-center">
                 <div class="col-sm-10">
                     <p class="text-center m-0">
                         <img style="width: 300px; object-fit: cover;" src="assets/images/Smiley face_Two Color.svg" alt="">
                     </p>
-                    <p v-if="search_keyword == '' " class="text-center m-0">No items available</p>
-                    <p v-else class="text-center m-0"><strong>{{search_keyword}}</strong> not found</p>
+                    <p class="text-center m-0"><strong>{{search_keyword}}</strong> not found</p>
                 </div>
             </div>
             <!-- End of no results error message -->
 
             <!-- Lessons/activities List -->
             <div class="row">
-                <div class="col-sm-3 mb-2" v-for="activity in sortedList()">
+                <div class="col-sm-3 mb-2" v-for="activity in lessons">
                     <div class="card mb-3 rounded-0">
-                        <!-- <img loading="lazy" v-bind:src="getImageUrl(activity.title)" class="card-img-top rounded-0 mycard-img" alt="..."> -->
                         <div class="card-body">
                             <h6 class="card-title">{{activity.title}}</h6>
                             <p class="card-text m-0"><strong>Location:</strong> {{activity.location}}</p>
@@ -115,27 +116,26 @@
                             <div class="row">
                                 <h6>Cart Items</h6>
                                 <!-- No items in the cart error message -->
-                                <div v-if="cart_items.length < 1" class="row justify-content-center">
+                                <!-- <div v-if="cart_items.length < 1" class="row justify-content-center">
                                     <div class="col-sm-10">
                                         <p class="text-center m-0">
                                             <img style="width: 200px; object-fit: cover;" src="assets/images/Smiley face_Two Color.svg" alt="">
                                         </p>
                                         <p class="text-center m-0">No items in the cart</p>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- End of no items in the cart error message -->
                                 <!-- Loop through cart items -->
-                                <div class="col-sm-6" v-for="item in cartItemsInfo()">
+                                <!-- <div class="col-sm-6" v-for="item in cartItemsInfo()">
                                     <div class="card mb-3 rounded-0">
-                                        <!-- <img src="" class="card-img-top rounded-0 mycard-img" alt="..."> -->
                                         <div class="card-body">
                                             <h6 class="card-title">{{item.title}}</h6>
                                             <p class="card-text m-0"><strong>Location:</strong> {{item.location}}</p>
                                             <p class="card-text m-0"><strong>Price:</strong> $ {{item.price}}</p>
-                                            <button v-on:click="removeFromCart(item.id)" class="btn btn-sm btn-danger rounded-0 w-100">Remove from cart <i class="fas fa-cart-arrow-down"></i></button>
+                                            <button v-on:click="removeFromCart(item._id)" class="btn btn-sm btn-danger rounded-0 w-100">Remove from cart <i class="fas fa-cart-arrow-down"></i></button>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                           </div>
                           <!-- Check out form -->
