--- a/schoolhero/index.html
+++ b/schoolhero/index.html
@@ -89,6 +89,7 @@
             <div class="row">
                 <div class="col-sm-3 mb-2" v-for="activity in lessons">
                     <div class="card mb-3 rounded-0">
+                        <img v-bind:src="activity.url" class="card-img-top rounded-0 mycard-img" alt="...">
                         <div class="card-body">
                             <h6 class="card-title">{{activity.title}}</h6>
                             <p class="card-text m-0"><strong>Location:</strong> {{activity.location}}</p>
@@ -127,6 +128,7 @@
                                 <!-- Loop through cart items -->
                                 <div class="col-sm-6" v-for="item in cartItemsInfo()">
                                     <div class="card mb-3 rounded-0">
+                                        <img v-bind:src="item.url" class="card-img-top rounded-0 mycard-img" alt="...">
                                         <div class="card-body">
                                             <h6 class="card-title">{{item.title}}</h6>
                                             <p class="card-text m-0"><strong>Location:</strong> {{item.location}}</p>
